# fullstack_brainjar

./: README.md
BrainJar/: .env  Cargo.toml  create_friends_tables.sql  test_auth.html  test_auth_fixed.ps1  test_auth_logic.rs  test_db_auth.html  test_friend_request.html
BrainJar/migrations/: 20250820000000_initial_schema.sql  20250820000001_enhance_streaks.sql  20250820000002_enhance_streaks_table.sql  20250825000001_enhanced_schema.sql  20250830000001_messages.sql  20250830000002_friend_requests_system.sql  20250830000003_simple_friend_requests.sql  20250904000001_fix_friends_schema.sql  20250905000001_problem_solutions.sql
BrainJar/src/: db.rs  main.rs  middleware.rs
BrainJar/src/models/: character.rs  chat.rs  friend.rs  message.rs  mod.rs  problem.rs  resource.rs  solution.rs  streak.rs  user.rs
BrainJar/src/routes/: auth.rs  characters.rs  chat.rs  enhanced_problems.rs  friends.rs  friends_new.rs  friends_simple.rs  messages.rs  messages_new.rs  messages_simple.rs  mod.rs  problems.rs  streaks.rs
brainjar-frontend2/: package-lock.json  package.json
brainjar-frontend2/src/: App.css  App.js  index.css
brainjar-frontend2/src/components/: BadgeDisplay.css  BadgeDisplay.js  CharacterCreator.css  CharacterCreator.js  Chat.css  Chat.js  ChatInterface.css  ChatInterface.js  Chatbot.css  Chatbot.js  EnhancedProblemCreator.css  EnhancedProblemCreator.js  EnhancedProblems.css  EnhancedProblems.js  FeedbackForm.css  FeedbackForm.js  FriendRecommendations.css  FriendRecommendations.js  FriendSuggestions.css  FriendSuggestions.js  FriendSuggestions_Modern.css  (+34 more)
(+21 files in other folders)
